# Stride_assignment

./: README.md
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/lib/pkgconfig/: m2wr_description.pc
catkin_ws/devel/share/m2wr_description/cmake/: m2wr_descriptionConfig.cmake
catkin_ws/src/m2wr_description/: package.xml
catkin_ws/src/m2wr_description/launch/: spawn.launch
catkin_ws/src/m2wr_description/urdf/: m2wr.xacro
