<?xml version="1.0"?>
<package>
  <name>m2wr_description</name>
  <version>0.0.0</version>
  <description>The m2wr_description package</description>
  <maintainer email="santhosh@todo.todo">santhosh</maintainer>
  <license>TODO</license>
  <!-- <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
